init: task portfolio

--- a/style.css
+++ b/style.css
@@ -1,163 +1,595 @@
-<style>
 @font-face {
-    font-family: "Oswald";
-    src: url("assets/fonts/Oswald.ttf");
-    font-weight: 150;
-}
-
-@font-face {
-    font-family: "Oswald";
-    src: url("assets/fonts/Oswald.ttf");
-    font-weight: 300;
-}
-
-* {
-    box-sizing: border-box;
-}
-
-@media (max-width: 768px) {
-    .section {
-      width: 100%;
-    }
-  }
-
-.header {
-    border: 3px solid white;
-    background-color: rgb(223, 185, 185);
-}
-
-.main {
-    border: 3px solid white;
-}
-
-.footer {
-    border: 3px solid white;
-}
-
-body {
-    min-height: 100vh;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between; 
-    font-family: "Oswald";
-    font-weight: 300;
-}
-
+  font-family:Merriweather ;
+   src: url("assets/fonts/Merriweather/Merriweather-Bold.ttf");
+ }
+ @font-face {
+  font-family: Inter ;
+   src: url("assets/fonts/Inter/Inter-VariableFont_slnt\,wght.ttf");
+ }
+ body {
+   background-color: black;
+   width: 1440;
+   margin: 0;
+   
+ }
+ * {
+   box-sizing: border-box;
+ }
 .container {
-    max-width: 1440px;
-    margin: 0 auto; 
+    width: 1440px;
+    margin: 0 auto;
+    padding: 0 20px;
+    border: tomato solid;
+    
+  }
+  .nav {
+    margin-left: auto;
+    margin-top: 0px;
+    
+    height: 90px;
+    
+    
+  }
+  header {
+    
+    
     display: flex;
-    flex-wrap: wrap;
-      }
-
-      .main-container {
-        display: flex;
-        flex-wrap: wrap
-      }
-
-.container 1{
-     float:right; 
+    
+    justify-content: space-between;
+    flex-direction: row;
+    padding-bottom: 0;
   }
-
-.section {
- width: 50%;
- text-align: left;
+  .nav-list {
+    display: flex;
+    flex-direction: row;
   }
+  .nav-item {
+    margin-top: 0px;
+    text-decoration: none;
+    font-family: Inter;
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+line-height: 50px;
 
-.nav-item {
-      padding:10px;
-      margin: 10px;
-      list-style-type: none;
+
+
+color: #FFFFFF;
+   
+
   }
+  .nav-link {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 50px;
+    color: #FFFFFF
+  }
+  .header-container {
+    height: 90px;
+    background: url('bg.jpg');
+    background-repeat: no-repeat;
+    background-position: center 0;
+    
+    
+   
+  }
+  a {
+   text-decoration: none; 
+  }
+  .nav-list {
+    list-style: none;
+    
   
-.nav-list {
+    margin:20px 90px 840px; 850px;
+  }
+  .logo {
+   
+    width: 50px;
+    height: 50px;
+    left: 20px;
+    margin-top: 20px;
+    transition: 0.3s
+  }
+  .logo:hover {
+    filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
+    contrast(87%);
+  }
+  .hero-container {
+   
+    background-image: url('bg.jpg');
+    background-position: center -90px;
+    background-repeat: no-repeat;
+    width: 100%;
+height: 820px;
+left: 0px;
+top: 0px;
+margin-left: -20px;
+border: rgb(10, 9, 9) solid 6px;
+    
+  }
+  .header-1 {
+    
+    display: flex ;
+    justify-content: space-between;
+    flex-direction: row;
+  
+    align-self: baseline;
+     
+  }
+  .lng {
+    background-color: none;
+    margin-top: 20px;
+   
+  }
+  main {
+    padding-top: 0;
+    
+  }
+  h1 {
+    font-family: Merriweather;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 60px;
+    line-height: 120px;
+    color: #FFFFFF;
+  }
+  .text {
+    width: 452px;
+    font-family: Inter;
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+line-height: 40px;
+color: #FFFFFF
+
+
+  }
+  .hero-1 {
+    width: 481px;
+    height: 330px;
+    margin-top: 140px;
+    margin-left: 101px;
+  }
+  .hire {
+height: 55px;
+width: 212px;
+left: 0%;
+right: 0%;
+top: 0px;
+margin-top: 25px;
+
+background: #BDAE82;
+border-radius: 0px
+
+  }
+  .hire-me {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 40px;
+    
+    
+    text-align: center;
+    
+    color: #000000;
+  }
+  li {
+    margin: 15px;
+   text-decoration: none;
+  }
+  .lng {
+color: white;
+  }
+  .lng- {
+    font-family: Inter;
+font-style: normal;
+font-weight: bold;
+font-size: 20px;
+line-height: 50px;
+
+
+text-align: center;
+
+color: #FFFFFF;
+    
+    margin-top: 22px;
+  }
+  .ru {
+    font-family: Inter;
+font-style: normal;
+font-weight: bold;
+font-size: 20px;
+line-height: 50px;
+
+
+text-align: center;
+
+color: #FFFFFF;
+
+    background-color: transparent;
+   
+    border: 0;
+    cursor: pointer;
+    
+  }
+  .en {
+    font-family: Inter;
+font-style: normal;
+font-weight: bold;
+font-size: 20px;
+line-height: 50px;
+
+
+text-align: center;
+
+color: #BDAE82;
+
+    background-color: transparent;
+    
+    border: 0;
+    cursor: pointer;
+    
+    
+  }
+  .section-title {
+    margin-top: 100px;
+    font-family: Merriweather;
+font-style: normal;
+font-weight: bold;
+font-size: 40px;
+line-height: 80px;
+color: #BDAE82;
+  display: flex;
+ 
+}
+.section-title:before, .section-title:after {
+  
+  content: " ";
+  flex: 1 1;
+  border-bottom: 1px solid #BDAE82;
+  margin: auto;
+}
+.skill-items {
+  display:flex;
+  justify-content:space-between;
+  flex-wrap: wrap;
+  flex-direction: row;
+  
+ 
+}
+.skill-item {
+ margin-top: 60px;
+  width:320px;
+height: 240px;
+align-items: center;
+}
+.item {
+  font-family: Inter;
+font-style: normal;
+font-weight: bold;
+font-size: 20px;
+line-height: 40px;
+color: #FFFFFF;
+
+}
+.item2 {
+  font-family: Inter;
+font-style: normal;
+font-weight: normal;
+font-size: 18px;
+line-height: 36px;
+
+
+text-align: center;
+}
+.cam {
+  width: 62px;
+height: 50px;
+margin-left: 129px;
+top: 0px;
+}
+.vid {
+  width: 62px;
+height: 50px;
+margin-left: 129px;
+top: 0px;
+}
+.img1 {
+  width: 62px;
+height: 50px;
+margin-left: 129px;
+top: 0px
+}
+.mic1 {
+  width: 62px;
+height: 50px;
+margin-left: 129px;
+top: 0px
+}
+
+
+h2 {
+  
+  font-family: Inter;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 40px;
+  
+  
+  text-align: center;
+  
+  color: #FFFFFF
+}
+h3 {
+  font-family: Inter;
+font-style: normal;
+font-weight: normal;
+font-size: 18px;
+line-height: 36px;
+
+
+text-align: center;
+
+color: #FFFFFF;
+}
+.btns {
+  display: flex;
+  justify-content:center;
+  margin: 60px -5px;
+
+}
+.btn {
+  width: 220px;
+height: 55px;
+border: #BDAE82 solid 2px;
+background-color: black;
+margin: 0 5px
+}
+.btn1 {
+  width: 220px;
+  height: 55px;
+  border: #BDAE82 solid 2px;
+  background-color: #BDAE82 ;
+}
+.season {
+  font-family: Inter;
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+line-height: 40px;
+
+
+text-align: center;
+
+color: #BDAE82;
+}
+ .season1 {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 40px;
+  
+  
+  text-align: center;
+  
+  color: #000000;
+  
+ }
+ .imgs {
+   margin-top: 60px;
+   margin: 60 -5px
+   
+ }
+.fhoto {
+  margin:  5px;
+}
+.video-player {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  list-style: none;
+  margin-top: 60px;
 }
+.vid-btn {
+  position: absolute;
+  width: 129,86px;
+  height: 130px;
+}
+.price-items {
+  display: flex;
+  justify-content: space-around;
+  gap: 25px;
+  margin-top: 60px;
 
-.nav-link {
+  
+}
+.price-item {
+
+  width: 450px;
+  height: 505px;
+  border: 3px solid #BDAE82;
+}
+.pr-it {
+  display: block;
+  font-family: Inter;
+font-style: normal;
+font-weight: normal;
+font-size: 18px;
+line-height: 36px;
+
+
+text-align: center;
+
+color: #FFFFFF;
+
+}
+.price1 {
+  font-family: Merriweather;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 56px;
+  
+  
+  text-align: center;
+  
+  color: #FFFFFF;
+}
+.price2 {
+  font-family: Merriweather;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 48px;
+
+  
+  text-align: center;
+  
+  color: #BDAE82;
+  
+}
+.order {
+  width: 220px;
+  height: 55px;
+  background: #BDAE82;
+  margin: 115px;
+  margin-top: 40px;
+  font-family: Inter;
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+line-height: 40px;
+
+
+text-align: center;
+
+color: #000000;
+}
+.section-contacts  {
+display: flex;
+justify-content: flex-end;
+  width: 1440px;
+  height: 700px;
+  margin-top: 100px;
+  margin-left: -20px;
+  background: url('./assets/img/contacts.jpg');
+  background-size: auto 700px;
+  background-position: center center;
+} 
+.contacts-container {
+  display: flex;
+ flex-direction:  column ;
+ justify-content: flex-end;
+ margin: 60px 20px;
+ width: 450px;
+ height: 445px;
+ gap: 20px;
+ 
+}
+.input {
+  width: 100%;
     padding: 0 20px;
-  line-height: 40px;
-  color: black;
-  font-style: italic;
-  font-size: 15px;
-  text-decoration: none;
-  transition: .5s;
+    margin-bottom: 20px;
+    border: 3px solid #bdae82;
+    outline: none;
+    font-size: 20px;
+    line-height: 40px;
+    color: #FFFFFF;
+    background: transparent;
 }
-
-.nav-link:hover {
-    color: red;
+.input::placeholder {
+  font-family: inherit;
+  color: #bdae82;
+  font-size: 20px;
 }
+.text-ar {
+resize: none;
+width: 450px;
+height: 100px;
 
-.section-title {
-    text-align: center;
-    letter-spacing: 6px;
-    color:rgb(65, 61, 61);
+
+border: 3px solid #bdae82;
+background: transparent;
 }
-
-img {
-    height: 250px;
-    width: auto;
-    position: relative;
-    align: left;
+.text-ar::placeholder {
+  font-family: inherit;
+  color: #bdae82;
+  font-size: 20px;
 }
-
-html {
-    min-width: 1246px;
-    scroll-behavior: smooth; 
-    background-color: rgb(204, 190, 190, 0.5);
-  }
-
-.logo {
-    align: left;
-      width: 50px;
-      height: 40px;
-      margin: 10px 40px 10px 30px;
-     
-  }
-
-.footer {
-      display: flex;
-      justify-content: space-between;
-      background-color: rgb(223, 185, 185);
-      color: white;
-  }
-
+.order1 {
+  width: 220px;
+  height: 55px;
+  background: #BDAE82;
+  margin: 0 ;
+  font-family: Inter;
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+line-height: 40px;
+}
+.year {
+  color: white;
+}
 a {
-      color:white;
-      text-decoration: none;
-      transition: 1s;
-  }
+  font-family: Inter;
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+line-height: 50px;
 
-a:hover {
-      color: darkgrey;
-  }
 
-h1 {
-      font-size: 50px;
-      text-decoration: underline;
-  }
 
-.code {
-     align:left;
-     display: flex;
- }
-
+color: #FFFFFF;
+  
+}
 .f {
-     margin: 10px 30px 20px 10px;
- }
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  
+}
+.ico4 {
+  margin-right: 20px;
+  width: 32px;
+height: 32px;
+}
+.year {
+  margin-right: 20px;
+  font-family: Inter;
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+line-height: 50px;
 
- ul, 
- li {
-     list-style-type: square;
- }
+}
+.c {
+  margin-right: 20px;
+  font-family: Inter;
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+line-height: 50px;
 
- .none {
-     list-style-type: none;
- }
+}
+.c-c {
+  margin-bottom: 40px;
+  font-family: Merriweather;
+font-style: normal;
+font-weight: bold;
+font-size: 40px;
+line-height: 80px;
+text-align: left;
 
-</style>
+
+
+color: #BDAE82;
+}
+.footer {
+  height: 150px;
+}
